--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,12 @@
     "require": {
         "php": "^8.3",
         "spatie/laravel-package-tools": "^1.16",
-        "illuminate/contracts": "^10.0||^11.0||^12.0"
+        "illuminate/contracts": "^10.0||^11.0||^12.0",
+        "illuminate/database": "^10.0||^11.0||^12.0",
+        "illuminate/support": "^10.0||^11.0||^12.0",
+        "hwkdo/intranet-app-base": "dev-main || ^0.2",
+        "spatie/laravel-permission": "^6.16",
+        "livewire/volt": "^1.6.7"
     },
     "require-dev": {
         "laravel/pint": "^1.14",
